--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="cards">
         <section class="card">
           <h2>Aliquam erat volutpat in dignissim id sagittis nec leo</h2>
-          <div>
+          <div class="card__body">
             <div>
               <img src="img.jpg" alt="">
             </div>
@@ -24,7 +24,7 @@
 
         <section class="card">
           <h2>Loremipsumdolorsitametconsecteturadipiscingelit</h2>
-          <div>
+          <div class="card__body">
             <div>
               <p>Lorem ipsum dolor sit amet, <a href="#">consectetur adipiscing elit</a>. Pellentesque sem lectus, posuere in dignissim id, sagittis nec leo. Aliquam erat volutpat. Proin dui leo, maximus sed odio et, vestibulum tempus mauris.</p>
               <p>Pellentesque sem lectus, posuere in dignissim id, sagittis nec leo. Aliquam erat volutpat. Proin dui leo, maximus sed odio et, vestibulum tempus mauris. Loremipsumdolorsitametconsecteturadipiscingelitvestibulumtempusmaurisvestibulumtempusmauris.</p>
@@ -35,7 +35,7 @@
 
         <section class="card">
           <h2>Proin dui leo</h2>
-          <div>
+          <div class="card__body">
             <div>
               <img src="img.jpg" alt="">
             </div>
@@ -49,7 +49,7 @@
 
         <section class="card">
           <h2>Lorem ipsum</h2>
-          <div>
+          <div class="card__body">
             <div>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquam justo ac semper pharetra. Sed eu libero nec felis eleifend venenatis eu ac urna. Praesent pretium nisi scelerisque nibh accumsan tempus.</p>
             </div>
@@ -62,7 +62,7 @@
 
         <section class="card">
           <h2>Lorem ipsum</h2>
-          <div>
+          <div class="card__body">
             <div>
               <img src="img.jpg" alt="">
             </div>
@@ -84,9 +84,9 @@
           </ul>
         </section>
 
-        <section>
+        <section class="card">
           <h2>Lorem ipsum</h2>
-          <div>
+          <div class="card__body">
             <div>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquam justo ac semper pharetra. Sed eu libero nec felis eleifend venenatis eu ac urna. Praesent pretium nisi scelerisque nibh accumsan tempus.</p>
             </div>
